--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.1",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "popper": "^1.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
