--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "popper": "^1.0.0",
+    "popper.js": "^1.11.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
