--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.6.9",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "popper": "^1.0.0",
     "popper.js": "^1.11.1",
